# VisionEval

./: .gitignore  NOISE_IDEAS.md  NOTES.md  SETUP.md  pyproject.toml
configs/: benchmarks.yaml  conditions.yaml  hardware.yaml
scripts/: benchmark_batching.py  check_progress.py  eval_noise_heldout.py  generate_plots.py  logit_lens.py  optimize_noise.py  run_machine.py  run_single.py  setup_env.sh  start.sh  start_noise.sh
src/benchmarks/: __init__.py  base.py  gqa.py  mmbench.py  mmmu.py  pope.py  scienceqa.py  textvqa.py
src/evaluation/: __init__.py  metrics.py  results_store.py  runner.py
src/image_conditions/: __init__.py  base.py  gaussian_noise.py  no_image.py  normal.py  wrong_image.py
src/model/: inference.py  loader.py
src/optimization/: __init__.py  differentiable_preprocess.py  embedding_optimizer.py  pixel_optimizer.py  teacher_forcing.py  utils.py
src/visualization/interactive/: __init__.py  animated_bar.py  dashboard.py  sankey.py  scatter_explorer.py
src/visualization/static/: __init__.py  delta_chart.py  grouped_bar.py  heatmap.py  radar_chart.py  style.py  vulnerability.py
