[project]
name = "vision-eval"
version = "0.1.0"
description = "Evaluating visual reliance in Cambrian-1: Do VLMs actually look at images?"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.37.0,<5.0.0",
    "accelerate>=0.25.0",
    "bitsandbytes>=0.41.0",
    "datasets>=2.16.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "fire>=0.5.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
